tests/expectations/parser/unreachable/eat_ident.out
Error [EPAR0370047]: expected struct name
    --> test:1:8
     |
   1 | struct import
     |        ^^^^^^
Error [EPAR0370047]: expected struct name
    --> test:3:8
     |
   3 | struct ;
     |        ^
Error [EPAR0370047]: expected struct name
    --> test:5:8
     |
   5 | struct .
     |        ^
Error [EPAR0370047]: expected struct name
    --> test:8:8
     |
   8 | struct ,
     |        ^
Error [EPAR0370047]: expected struct name
    --> test:10:8
     |
  10 | struct *
     |        ^
Error [EPAR0370047]: expected struct name
    --> test:12:8
     |
  12 | struct +
     |        ^
Error [EPAR0370047]: expected struct name
    --> test:14:8
     |
  14 | struct -
     |        ^
Error [EPAR0370047]: expected struct name
    --> test:16:8
     |
  16 | struct /
     |        ^
Error [EPAR0370047]: expected struct name
    --> test:18:8
     |
  18 | struct [
     |        ^
Error [EPAR0370047]: expected struct name
    --> test:20:8
     |
  20 | struct ]
     |        ^
Error [EPAR0370027]: Missing a program scope in a Leo file.
    --> test:1:1
     |
   1 | struct import
     | ^^^^^^^^^^^^^
   2 | 
   3 | struct ;
     | ^^^^^^^^
   4 | 
   5 | struct .
     | ^^^^^^^^
   6 | 
   7 | 
   8 | struct ,
     | ^^^^^^^^
   9 | 
  10 | struct *
     | ^^^^^^^^
  11 | 
  12 | struct +
     | ^^^^^^^^
  13 | 
  14 | struct -
     | ^^^^^^^^
  15 | 
  16 | struct /
     | ^^^^^^^^
  17 | 
  18 | struct [
     | ^^^^^^^^
  19 | 
  20 | struct ]
     | ^^^^^^^^
  21 | 
  22 | struct {
     | ^^^^^^^^
  23 | 
  24 | struct }
     | ^^^^^^^^
  25 | 
  26 | struct (
     | ^^^^^^^^
  27 | 
  28 | struct )
     | ^^^^^^^^
  29 | 
  30 | struct :
     | ^^^^^^^^
  31 | 
  32 | struct ::
     | ^^^^^^^^^
  33 | 
  34 | struct ?
     | ^^^^^^^^
  35 | 
  36 | struct _
     | ^^^^^^^^
  37 | 
  38 | struct =
     | ^^^^^^^^
  39 | 
  40 | struct ==
     | ^^^^^^^^^
  41 | 
  42 | struct !
     | ^^^^^^^^
  43 | 
  44 | struct !=
     | ^^^^^^^^^
  45 | 
  46 | struct >
     | ^^^^^^^^
  47 | 
  48 | struct >=
     | ^^^^^^^^^
  49 | 
  50 | struct <
     | ^^^^^^^^
  51 | 
  52 | struct <=
     | ^^^^^^^^^
  53 | 
  54 | struct >
     | ^^^^^^^^
  55 | 
  56 | struct ..
     | ^^^^^^^^^
  57 | 
  58 | struct as
     | ^^^^^^^^^
  59 | 
  60 | struct const
     | ^^^^^^^^^^^^
  61 | 
  62 | struct let
     | ^^^^^^^^^^
  63 | 
  64 | struct for
     | ^^^^^^^^^^
  65 | 
  66 | struct if
     | ^^^^^^^^^
  67 | 
  68 | struct else
     | ^^^^^^^^^^^
  69 | 
  70 | struct i8
     | ^^^^^^^^^
  71 | 
  72 | struct i16
     | ^^^^^^^^^^
  73 | 
  74 | struct i32
     | ^^^^^^^^^^
  75 | 
  76 | struct i64
     | ^^^^^^^^^^
  77 | 
  78 | struct i128
     | ^^^^^^^^^^^
  79 | 
  80 | struct u8
     | ^^^^^^^^^
  81 | 
  82 | struct u16
     | ^^^^^^^^^^
  83 | 
  84 | struct u32
     | ^^^^^^^^^^
  85 | 
  86 | struct u64
     | ^^^^^^^^^^
  87 | 
  88 | struct u128
     | ^^^^^^^^^^^
  89 | 
  90 | struct &
     | ^^^^^^^^
  91 | 
  92 | struct return
     | ^^^^^^^^^^^^^
  93 | 
  94 | struct self
     | ^^^^^^^^^^^
  95 | 
  96 | struct Self
     | ^^^^^^^^^^^
  97 | 
  98 | struct true
     | ^^^^^^^^^^^
  99 | 
 100 | struct false
     | ^^^^^^^^^^^^
 101 | 
 102 | struct 0
     | ^^^^^^^^
 103 | 
 104 | program test.aleo {}
     | ^^^^^^^^^^^^^^^^^^^^
     |
     = Add a program scope of the form: `program <name>.aleo { ... }` to the Leo file.
